orange working, tensorflow almost done, starting tableau